--- a/README
+++ b/README
@@ -1,13 +1,35 @@
-This is an unfinished. but working version of the 6809 assewmbler. simulator
-and software. It is released under the GPL
-It runs under several versions of Unix. Docs are in LaTeX format (sbc09.tex) and
-in ASCI (README.txt)
+Assembler and simulator for the 6809.
 
-mon2.asm is an alternative version of the monitor program.
+I wrote an assembler and a simulator for the Motorola M6809 processor.
 
-alt09.rom is a version of the ROM that contains the alternative monitor and
-Forth. Forth is transferrred to RAM by a small loader.
-To start Forth type G8000. To start it again, type G400.
+The first file of this shell archive contains C source, the second part
+conttains example programs that can be run on the simulator.
 
-Yes, you can run TETRIS from the Forth included with this simulator.
+The archive contains:
+a09.c the 6809 assembler. It's fairly portable (ansi) C. It works on both
+      Unix and DOS (TC2.0). 
 
+      Features of the assembler.
+      - generates binary file starting at  the first address
+        where code is actually generated. So an initial block of RMB's
+        (maybe at a different ORG) is not included in the file.
+      - Accepts standard syntax.
+      - full expression evaluator.
+      - Statements SET, MACRO, PUBLIC, EXTERN IF/ELSE/ENDIF INCLUDE not yet
+        implemented. Some provisions are already made internally for macros 
+        and/or relocatable objects.
+
+V09.c  the 6809 simulator. Loads a binary image (from a09) at adress $100
+       and starts executing. SWI2 and SWI3 are for character output/input.
+       SYNC stops simulation. When compiling set -DBIG_ENDIAN if your 
+       computer is big-endian. Set TERM_CONTROL for a crude single character
+       (instead of ANSI line-by-line) input. Works on Unix.
+v09tc.c same for Turbo C. Has its own term control.
+
+test09.asm and bench09.asm simple test and benchmark progs.
+
+ef09.asm Implementation of E-Forth, a very rudimentary and portable Forth.
+      Type WORDS to see what words you have. You can evaluate RPN integer
+      expressions, like "12 34 + 5 * . " You can make new words like
+      " : SQUARED DUP * ; " etc. 
+      
